--- a/css/styles.scss
+++ b/css/styles.scss
@@ -4,6 +4,7 @@ $color-pale: #CEC8FF;
 $color-mid: #901CAD;
 $color-dark: #60106b;
 $color-transparent-black: rgba(0, 0, 0, 0.5);
+$color-teal: #17A2B8;
 
 body {
     font-family: "Open Sans", sans-serif;
@@ -20,6 +21,20 @@ h2 {
 header {
     h2 {
         color: $color-pale;
+    }
+}
+
+#reserveModal {
+    .modal-header {
+        background-color: $color-teal;
+        color: white;
+    }
+}
+
+#loginModal {
+    .modal-header {
+        background-color: $color-mid;
+        color: white;
     }
 }
 
@@ -57,4 +72,5 @@ header {
     position: absolute;
     right: 0;
     bottom: 0;
-}cd 
+}
+
